2008-07-31  Kevin Layer  <layer@relay.known.net>

	* Makefile: make --sign a make variable, so I can specify it
	  as null

2008-07-30  root  <root@gills.dancysoft.com>
1.2.17
	* blacklist.cl, smtp-server-checkers.cl: Never run blacklist
	checks against trusted clients.

2008-04-09  root  <root@gills.dancysoft.com>
1.2.16
	
	* greylist.cl: Added dnswl.org support in the greylisting module.
	Greylisting is bypassed for IPs found in dnswl.org.

	* deliver.cl: Remove extra newlines when reporting stdout/stderr
	from delivery program.

	* maild.spec.in: Added %define debug_package %{nil} to avoid
	building the debuginfo package (which doesn't currently work w/
	8.1 shared lib).
	
2007-07-23  Ahmon Dancy  <dancy@dancy>
1.2.15
	
	* smtp-server.cl: bug17189.  Reduce memory leaks caused by failing
	to close the ssl-server-stream created by the STARTTLS command.  A
	leak still exists in the real C heap, though. 

2007-07-18  Ahmon Dancy  <dancy@dancy>
1.2.14
	
	* Just a version bump for 8.1rc1 build.

2007-05-30  Ahmon Dancy  <dancy@dancy>
1.2.13

        * config.cl: Added new config parametr *maxheadersize* which
	defaults to 32768.  Messages with total header size larger than
	this will be rejected.

	* input.cl: 

	Adjusted read-message-stream so that it checks the
	maximum header size and returns a complaint if exceeded.  

	Header lines longer than *maxdatalinelen* are handled properly
	now.

	read-message-stream now returns information about any size
	constraint violations (headers or total message size) to the
	caller.

	read-from-stdin will now properly generate an error for messages
	that exceeded size contraints.
	
	* checkers.cl: Removed message-size-checker.  It's function has
	been integrated into input.cl:read-message-stream.

	* smtp-server.cl: smtp-data.  Allow either :err or :reject return
	status from smtp-data-checkers.
	

2007-05-18  Ahmon Dancy  <dancy@dancy>
1.2.12
	
	* Built with 8.1.beta with bug17033 fixes.
